# platform-engine

./: .gitignore  CMakeLists.txt  README
cmake/Modules/: FindLibSDL.cmake
doc/: Doxyfile  Doxyfile~
doc/html/: _game_loop_delay_8h-source.html  _game_map_8h-source.html  _game_map_layer_8h-source.html  _game_navigation_state_8h-source.html  _game_state_8h-source.html  _platform_engine_8h-source.html  annotated.html  class_game_map-members.html  class_game_map.html  class_game_map_layer-members.html  class_game_map_layer.html  class_game_navigation_state-members.html  class_game_navigation_state.html  class_game_state-members.html  class_game_state.html  class_platform_engine-members.html  class_platform_engine.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherits.html  luainc_8h-source.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
doc/html/d0/d7e/: class_game_static_movement_state__inherit__graph.map  class_game_static_movement_state__inherit__graph.md5
doc/html/d1/d57/: class_game_navigation_state__coll__graph.map  class_game_navigation_state__coll__graph.md5
doc/html/d1/da8/: platform-game-map-layer-background_8h-source.html
doc/latex/: annotated.tex  class_game_map.tex  class_game_map_layer.tex  class_game_navigation_state.eps  class_game_navigation_state.tex  class_game_state.tex  class_platform_engine.tex  doxygen.sty  hierarchy.tex  namespaces.tex  refman.tex
doc/man/man3/: GameMap.3  GameMapLayer.3  GameNavigationState.3  GamePlayer.3  GameState.3  GameStaticMovementState.3  Platform.3  PlatformEngine.3  Platform_GameMap.3  Platform_GameMapBackgroundLayer.3  Platform_GameMapLayer.3  Platform_GamePlayer.3  Platform_GameState.3  Platform_GameStaticMovementState.3  Platform_PlatformEngine.3
scripts/: beginstate.lua  init.lua  map001.lua
src/: CMakeLists.txt  GameLoopDelay.cpp  GameLoopDelay.h  GameMap.cpp  GameMap.h  GameMapLayer.h  GameNavigationState.cpp  GameNavigationState.h  GamePlayer.cpp  GamePlayer.h  GameState.cpp  GameState.h  GameStaticMovementState.cpp  GameStaticMovementState.h  PlatformEngine.cpp  PlatformEngine.h  luainc.h  main.cpp  platform-engine.cc  platform-engine.h  platform-game-main.cc  platform-game-map-layer-background.cc  platform-game-map-layer-background.h  platform-game-map-layer.h  platform-game-map.cc  platform-game-map.h  platform-game-player.cc  platform-game-player.h  platform-game-state-static-movement.cc  platform-game-state-static-movement.h  platform-game-state.cc  platform-game-state.h  platform-loop-delay.cc  platform-loop-delay.h
(+114 files in other folders)
